--- a/src/vercel.json
+++ b/src/vercel.json
@@ -1,6 +1,6 @@
 {
     "rewrites": [
-      { "source": "/(.*)", "destination": "/index.html" }
+      { "source": "/products/:productId", "destination": "/index.html" }
     ]
   }
   
